--- a/osm/style-lf.css
+++ b/osm/style-lf.css
@@ -1,12 +1,20 @@
+html, body, #map { 
+  height: 100vh; 
+  width: 100vw; 
+}
 body {
   padding:0;
   margin:0;
 }
+.hidden {
+  visibility: hidden;
+  display: none;
+}
 #map {
   padding:0px;
   margin:0px;
-  width:100%;
-  height:100%;
+  /*width:100%;
+  height:100%;*/
 }
 .popup {
   font-size:12px;
@@ -77,7 +85,7 @@ h4 {
 .info-toolbar, .setting-toolbar
 {
     background: none repeat scroll 0 0 #fff;
-    border-radius: 5px;
+    border-radius: 4px;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
     margin-bottom: 10px;
 }
@@ -94,6 +102,11 @@ h4 {
    font-size:12px;
 }
 
+.leaflet-control-zoom, .leaflet-control-zoom a
+{
+  width: 36px;
+  background-color: #fff;
+}
 
 /***********begin Mouseposition-plugin (Koordinates left bottom)*/
 .leaflet-container .leaflet-control-mouseposition {
@@ -248,7 +261,7 @@ font: 11px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
     -webkit-border-radius: 16px;
     border-radius: 16px;
     cursor: pointer;
-    z-index: 8; }
+    z-index: 999; }
 
 .leaflet-left {
   transition: left 0.5s; }
