--- a/osm/style-lf.css
+++ b/osm/style-lf.css
@@ -61,8 +61,9 @@ h4 {
   font-family: "helvetica Neue", arial, helvetica, sans-serif;
 }
 #sidebar-rftools hr {
-  margin-bottom: 2px;
-  margin-top: 4px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  border-top: 1px solid #ccc;
 }
 #sidebar-rftools h3 {
   margin: 0px;
@@ -96,7 +97,7 @@ h4 {
 .rftools-toolbar-a {
   width:36px;
   height:36px;
-  background-image:url("images/rf.png");
+  background-image:url("images/rf.gif");
   background-position: 50% 50%;
   background-repeat: no-repeat;
   display: block;
@@ -187,7 +188,7 @@ h4 {
 {
   display: none;
 }
-#side-draw-del-point1, #side-draw-del-point2, #side-draw-del-rect
+#side-draw-del-point1, #side-draw-del-point2, #side-draw-del-point3, #side-draw-del-rect
 {
   display: none;
 }
@@ -451,7 +452,7 @@ font: 11px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
   padding: 5px 0px 5px 0px;
 }
 .popup-darg {
-  color: #888;
+  color: #333;
   position: absolute;
   margin-top: -17px;
   margin-left: 10px;
@@ -461,3 +462,206 @@ font: 11px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
   margin-top:  -17px;
   margin-left: 220px;
 }
+#panoramaAdv {
+  display: none;
+  background-color: #eee;
+  padding: 3px;
+}
+#panorama-loading {
+  font-size:30px;
+  height: 350px;
+}
+#panorama-loading img {
+  opacity: 0.6;
+  height: 200px;
+}
+#panorama {
+  margin-bottom: -15px;
+}
+#rfElevation, #rfAngle, #rfZoom {
+  width: 100%;
+  margin: 0px;
+}
+#panorama-meta {
+  position:absolute;
+  bottom: 11px;
+  font-size: 13px;
+  margin-left: 300px;
+}
+#panorama-meta-big, #panorama-error {
+  position:absolute;
+  bottom: 0px;
+  font-size: 13px;
+  margin-left: 430px;
+}
+#panorama-big-in {
+  position: relative;
+  bottom: 0px;
+  font-family: "helvetica Neue", arial, helvetica, sans-serif;
+  font-size: 13px;
+  height: 20px;
+}
+#panorama-top {
+  font-family: "helvetica Neue", arial, helvetica, sans-serif;
+  font-size: 13px;
+  color: #000;
+}
+#pan-x-custom, #pan-y-custom {
+  width: 50px;
+  height: 12px;
+}
+#panoarama-big-content {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+#panorama-img-parent {
+  overflow: auto;
+  height: 200px;
+  width: 100%;
+  /*position: relative;*/
+}
+#panoarama-big-content {
+  min-width: 300px;
+  overflow-x: auto;
+  font-family: "helvetica Neue", arial, helvetica, sans-serif;
+}
+#panorama-error {
+  font-weight: bold;
+  color: #f00;
+}
+.pan-important {
+  color: #000;
+  font-weight: bold;
+}
+#rf-point {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+
+
+
+ 
+.leaflet-container .leaflet-control-search {
+  position:relative;
+  float:right;
+  background:#fff;
+  color:#1978cf;
+
+  background: #fff;
+  border-radius: 4px;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
+  
+  z-index:1000; 
+  margin-left: 10px;
+  margin-top: 10px;
+}
+.leaflet-control-search.search-exp {/*expanded*/
+  background: #fff;
+  border-radius: 4px;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
+}
+.leaflet-control-search .search-input {
+  display:block;
+  float:left;
+  background: #fff;
+  border:1px solid #666;
+  border-radius:2px;
+  height:22px;
+  padding:0 20px 0 2px;
+  margin:4px 0 4px 4px;
+}
+.leaflet-control-search.search-load .search-input {
+  background: url('images/loader.gif') no-repeat center right #fff;
+}
+.leaflet-control-search.search-load .search-cancel {
+  visibility:hidden;
+}
+.leaflet-control-search .search-cancel {
+  display:block;
+  width:22px;
+  height:22px;
+  position:absolute;
+  right:28px;
+  margin:6px 0;
+  background: url('images/search-icon.png') no-repeat 0 -46px;
+  text-decoration:none;
+  filter: alpha(opacity=80);
+  opacity: 0.8;   
+}
+.leaflet-control-search .search-cancel:hover {
+  filter: alpha(opacity=100);
+  opacity: 1;
+}
+.leaflet-control-search .search-cancel span {
+  display:none;/* comment for cancel button imageless */
+  font-size:18px;
+  line-height:20px;
+  color:#ccc;
+  font-weight:bold;
+}
+.leaflet-control-search .search-cancel:hover span {
+  color:#aaa;
+}
+.leaflet-control-search .search-button {
+  display:block;
+  float:left;
+  width:36px;
+  height:36px;  
+  background: url('images/search-icon.png') no-repeat 8px 9px #fff;
+  opacity: 0.6;
+  border-radius:4px;
+}
+.leaflet-control-search .search-button:hover {
+  background: url('images/search-icon.png') no-repeat 8px 9px #eee;
+  opacity: 0.6;
+}
+.leaflet-control-search .search-tooltip {
+  position:absolute;
+  top:100%;
+  /*left:0;
+  float:right;*/
+  list-style: none;
+  padding-left: 0;
+  /*min-width:120px;*/
+  max-height:122px;
+  box-shadow: 1px 1px 6px rgba(0,0,0,0.4);
+  background-color: rgba(0, 0, 0, 0.25);
+  z-index:1010;
+  overflow-y:auto;
+  overflow-x:hidden;
+  cursor: pointer;
+  width: 100%
+}
+.leaflet-control-search .search-tip {
+  margin:2px;
+  padding:2px 4px;
+  display:block;
+  color:black;
+  background: #eee;
+  border-radius:.25em;
+  text-decoration:none; 
+  white-space:nowrap;
+  vertical-align:center;
+}
+.leaflet-control-search .search-button:hover {
+  background-color: #f4f4f4;
+}
+.leaflet-control-search .search-tip-select,
+.leaflet-control-search .search-tip:hover {
+  background-color: #fff;
+}
+.leaflet-control-search .search-alert {
+  cursor:pointer;
+  clear:both;
+  font-size:.75em;
+  margin-bottom:5px;
+  padding:0 .25em;
+  color:#e00;
+  font-weight:bold;
+  border-radius:.25em;
+}
+
+
